--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,6 +23,7 @@ phases:
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - aws ecs describe-task-definition --task-definition green-blue-ecs-example | jq '.taskDefinition' > taskdef.json
+      - cat taskdef.json
       - envsubst < appspec_template.yaml > appspec.yaml
 artifacts:
   files:
