--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,7 @@ phases:
       - echo Pushing the Docker images...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - aws ecs describe-task-definition --task-definition green-blue-ecs-example | jq '.taskDefinition' > taskdef.json
+      - aws ecs describe-task-definition --task-definition $TASK_DEFINITION_FAMILY | jq '.taskDefinition' > taskdef.json
       - cat taskdef.json
       - envsubst < appspec_template.yaml > appspec.yaml
 artifacts:
