--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,6 +24,7 @@ phases:
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - aws ecs describe-task-definition --task-definition $TASK_DEFINITION_FAMILY | jq '.taskDefinition' > taskdef.json
       - envsubst < appspec_template.yaml > appspec.yaml
+      - cat appspec.yaml taskdef.json
 artifacts:
   files:
     - appspec.yaml
