--- a/appspec_template.yaml
+++ b/appspec_template.yaml
@@ -7,7 +7,7 @@ Resources:
         LoadBalancerInfo:
           ContainerName: "$CONTAINER_NAME"
           ContainerPort: "80"
-        PlatformVersion: "LATEST"
+        # PlatformVersion: "LATEST"
         # NetworkConfiguration:
         #   AwsvpcConfiguration:
         #     Subnets: ["$SUBNET_1","$SUBNET_2"]
